--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.16.7",
     "pinia": "^2.1.7",
     "vite-plugin-pwa": "^0.19.7",
     "vue": "^3.4.15",
